syntax = "proto3";

package crawler;

import "google/protobuf/empty.proto";

option go_package = "./proto";

service CrawlerService {
  rpc GetPage(PageRequest) returns (PageResponse);
  rpc SendToKafka(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message PageRequest {
  int64 id = 1;
}

message PageResponse {
  int64 id = 1;
  string url = 2;
  string html = 3;
}
